[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/core/HUD.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.035294, 0.066667, 0.101961, 0.823529)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 1
margin_left = 20.0
margin_top = 20.0
text = "0"

[node name="DropsLabel" type="Label" parent="."]
anchors_preset = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 20.0
margin_right = -20.0
text = "0/0"
horizontal_alignment = 2

[node name="Streak" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Streak"]
text = "Streak"

[node name="Progress" type="TextureProgressBar" parent="Streak"]
size_flags_horizontal = 3
value = 0.0
min_value = 0.0
max_value = 100.0

[node name="PulseRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.8, 0.1, 0.1, 0.0)
mouse_filter = 2

[node name="Results" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
visible = false
custom_minimum_size = Vector2(320, 240)
add_theme_stylebox_override("panel", SubResource("1"))

[node name="VBoxContainer" type="VBoxContainer" parent="Results"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 1

[node name="Title" type="Label" parent="Results/VBoxContainer"]
text = "Results"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Results/VBoxContainer"]
text = "Score: 0"

[node name="Grade" type="Label" parent="Results/VBoxContainer"]
text = "Grade: -"

[node name="Economy" type="Label" parent="Results/VBoxContainer"]
text = "Economy: 0.00"

[node name="Buttons" type="HBoxContainer" parent="Results/VBoxContainer"]
alignment = 1

[node name="Retry" type="Button" parent="Results/VBoxContainer/Buttons"]
text = "Retry"

[node name="Menu" type="Button" parent="Results/VBoxContainer/Buttons"]
text = "Menu"

[connection signal="pressed" from="Results/VBoxContainer/Buttons/Retry" to="HUD" method="on_retry_pressed"]
[connection signal="pressed" from="Results/VBoxContainer/Buttons/Menu" to="HUD" method="on_menu_pressed"]
